# bos-cli-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: code_style.yml  deploy-mainnet.yml  deploy-testnet.yml  publish-to-npm.yml  release-plz.yml  release.yml  test.yml
src/: common.rs  consts.rs  deploy.rs  download.rs  main.rs  sign_as.rs  socialdb_types.rs
src/components/: mod.rs
src/components/delete/: mod.rs
src/components/delete/component/: mod.rs
src/components/delete/selected/: mod.rs
src/components/delete/sign_as/: mod.rs
src/components/delete/widget/: mod.rs
src/components/deploy/: deploy_args.rs  mod.rs  sign_as.rs
src/components/diff/: mod.rs
src/components/diff_code_deploy/: mod.rs
src/components/download/: mod.rs
src/deploy/: deploy_args.rs  mod.rs  sign_as.rs
src/download/: mod.rs
src/extensions/: mod.rs
src/extensions/self_update/: mod.rs
src/grant_write_access/: mod.rs
src/grant_write_access/account_id/: mod.rs
src/grant_write_access/function_call_access_key/: mod.rs
src/grant_write_access/sign_as/: mod.rs
src/grant_write_access/storage_deposit/: mod.rs
src/project/: mod.rs
src/project/new/: mod.rs
src/social_db/: mod.rs
src/social_db/data/: mod.rs  sign_as.rs
src/social_db/data/delete/: mod.rs  sign_as.rs
src/social_db/data/set/: call_function_args_type.rs  function_args.rs  mod.rs  sign_as.rs
src/social_db/data/set/data/: mod.rs  with_json.rs  with_json_file.rs  with_text.rs  with_text_file.rs
src/social_db/data/set/function_args/: mod.rs  with_json.rs  with_json_file.rs  with_text.rs  with_text_file.rs
src/social_db/data/view/: mod.rs
src/social_db/manage_profile/: mod.rs
src/social_db/permissions/: mod.rs
src/social_db/permissions/grant_write_access/: mod.rs
src/social_db/permissions/grant_write_access/account_id/: mod.rs
src/social_db/permissions/grant_write_access/function_call_access_key/: mod.rs
src/social_db/permissions/grant_write_access/sign_as/: mod.rs
src/social_db/permissions/grant_write_access/storage_deposit/: mod.rs
src/social_db/prepaid_storage/: mod.rs
src/social_db/profile_management/: mod.rs
src/social_db/profile_management/view_profile/: as_json.rs  as_text.rs  mod.rs
src/storage_management/: mod.rs  view_storage_balance.rs
src/storage_managment/: mod.rs
tests/: deploy_test.rs  test_util.rs
wix/: main.wxs
