[package]
name = "bos-cli"
version = "0.3.5"
authors = ["FroVolod <frol_off@meta.ua>", "frol <frolvlad@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/FroVolod/bos-cli-rs"
description = "Command line utility helps to develop widgets for near.social by allowing developers to use standard developer tools like their best code editor and standard tools for source code version control, and then deploy their widgets to SocialDB in one command."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bos"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
inquire = "0.6"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

tokio = { version = "1.0", features = [ "rt-multi-thread" ] }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

shell-words = "1.0.0"

color-eyre = "0.6"

similar = { version = "2.2.1", features = ["inline"] }
glob = "0.3.1"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"

near-crypto = "0.17.0"
near-primitives = "0.17.0"
near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"

interactive-clap = "0.2.7"
interactive-clap-derive = "0.2.7"

console = "0.15.5"

near-cli-rs = { version = "0.6.2", default-features = false }
near-socialdb-client = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.7.0"

[features]
default = ["ledger"]
ledger = ["near-cli-rs/ledger"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.1.0-prerelease.3"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.68.2"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# Format to use for tarballs/zips -- .tar.gz is currently required for the npm installer
windows-archive = ".tar.gz"
unix-archive = ".tar.gz"
