[package]
name = "bos-cli"
version = "0.3.18"
authors = ["FroVolod <frol_off@meta.ua>", "frol <frolvlad@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/bos-cli-rs/bos-cli-rs"
description = "Command line utility helps to develop widgets for near.social by allowing developers to use standard developer tools like their best code editor and standard tools for source code version control, and then deploy their widgets to SocialDB in one command."

[package.metadata.wix]
upgrade-guid = "0C6AC05E-AA87-4A7A-91F2-3829A7863825"
path-guid = "4D85FF8F-E7B4-4129-88F6-D7F20D77B4A8"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bos"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
inquire = "0.7"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

tokio = { version = "1.0", features = ["rt-multi-thread"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

shell-words = "1.0.0"

color-eyre = "0.6"

similar = { version = "2.2.1", features = ["inline"] }
glob = "0.3.1"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"

indicatif = "0.17.8"
indenter = "0.3"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

near-crypto = "0.28"
near-primitives = "0.28"
near-jsonrpc-client = "0.15"
near-jsonrpc-primitives = "0.28"

interactive-clap = "0.3"
interactive-clap-derive = "0.3"

console = "0.15.5"

near-cli-rs = { version = "0.17.0", default-features = false }
near-socialdb-client = "0.9"
semver = "1.0.4"
self_update = { version = "0.41.0", features = [
    "archive-tar",
    "compression-flate2",
] }

[dev-dependencies]
assert_cmd = "2.0.16"
httpmock = "0.7.0"
tempfile = "3.12.0"
predicates = "3.1.2"
dirs = "5.0.1"
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.7.0"

[features]
default = ["ledger"]
ledger = ["near-cli-rs/ledger"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.25.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# Publish jobs to run in CI
publish-jobs = ["npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "upload"
# XXX: In order to use custom GITHUB_TOKEN to trigger npm-publish workflow, 
# we allow dirty CI scripts to avoid cargo-dist complains.
allow-dirty = ["ci"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-arm64-22.04-4core"

[workspace.metadata.dist.dependencies.apt]
libudev-dev = { version = "*", targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
] }
